force-app/main/default/objects/Benchmark_Result__c/Benchmark_Result__c.object-meta.xml
<CustomObject>
    <label>Benchmark Result</label>
    <nameField>
        <displayFormat>BR Id {000000}</displayFormat>
        <label>Benchmark Result Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benchmark Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>