force-app/main/default/objects/Benchmark_Result__c/fields/Benchmark_Name__c.field-meta.xml
<CustomField>
    <fullName>Benchmark_Name__c</fullName>
    <label>Benchmark Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>