force-app/main/default/objects/Benchmark_Result__c/fields/Duration_Milliseconds__c.field-meta.xml
<CustomField>
    <fullName>Duration_Milliseconds__c</fullName>
    <label>Duration (Milliseconds)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>