force-app/main/default/objects/Benchmark_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Benchmark_Name__c</columns>
    <columns>Duration_Milliseconds__c</columns>
    <columns>Record_Count__c</columns>
    <columns>Notes__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>